gymnastics side logo now auto-sized correctly, it overlaps with the per-slide characters, but those may not need to be there in the first place

--- a/wp-content/themes/sho_child/css/main.css
+++ b/wp-content/themes/sho_child/css/main.css
@@ -93,3 +93,10 @@ div.carousel-caption img {
 div.jumbotron.wod_header{
     padding:0px;
 }
+
+img.gym_side_image{
+    position:absolute;
+    top:0;
+    height:100%;
+    width:20%;
+}
